# gysd-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  auth_cookie.draft.rs  js_test.js  shell.nix
.sqlx/: query-09c72053c1368f84d2605fcf6a6798d39064db63bea8e63f6a876366bc828492.json  query-164b17a10811992d5ae2e77bc76a5a0cececc2de37ee2a987424e91c514cce48.json  query-2c2b7e06b21a91e6f2f77a1dab92b6b98137d53359297a1ff6b403df498bba00.json  query-320bf1d2764b197b1e90c52c222c3f1ca6f9e4f59e7b4497dd4da2468dbce06a.json  query-5d71b54680e721b81a2b49a217908056d6d0066e0b4715d9e48c32f2efc0bfd7.json  query-7d3927c59f67700b6441dce066dd8887e467708248d1d9576e5b4bb3d9e66f2b.json  query-9ad9b1628c34b80307cec2f22c380d4ffae47d149d40934bf19b627b2a1ac03e.json  query-a253ac42ae4f5e777b4c805c035b41808c2c4ca68789f02ddc327e0190477fa9.json  query-a3414080c8166061801a19a2ae68833080653fc48a87bf88d5e6da3da9905935.json  query-aa096a071a119f175728c8ffa34f99d80385e6fe5629e3bdf8121981acf979c3.json  query-c2e230ac3a3dc94217b121677941f4b963065703308f01fc70f9980a4f122098.json  query-c3d2b3bcbd89c021d8588bf3e005f380dab8872eb22ad0555fab80259278d47a.json  query-d373fe648ad3ff3a08aafd9d340a2718c6ead2683150b10a126f4cc78dff9684.json  query-d6a24b4741558cc1159d7a6aad8ee540289be4d46b7eb467bd6890ed868640ea.json  query-f0a15ad32019a144f4928fa05977c3cc992b110998f6df573c39883a5228ee44.json  query-f7cda1e0719d9b9b94756bae057669851673942961bd056a52357b8690bd6e80.json
src/: datatypes.rs  helpers.rs  main.rs
src/api/: habit.rs  login.rs  mission.rs  mod.rs  quick.rs  sync.rs  user.rs
static/: evtest.html
