[package]
name = "gysd-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rocket = { version = "0.5.1", features = ["json"]}
rocket_db_pools = { version = "0.2.0", features=["sqlx_sqlite"] }
serde = "1.0.228"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "sqlite"] }
time = "0.3.44"
uuid = { version = "1.19.0", features = ["v4"] }
